Fix build on Mavericks

Patch for THRIFT-2219