lib/rb/ext/strlcpy.h
@@ -25,6 +25,4 @@
 size_t
 strlcpy (char *dst, const char *src, size_t dst_sz);
 #else
-extern size_t strlcpy(char *, const char *, size_t);
 #endif
-
